--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
 
   <link rel="stylesheet" href="/ahoy.css" />
 
+  <!-- https://www.zachleat.com/web/preload/ -->
+  <link rel="preload" href="/fonts/goudybookletter1911.woff2" as="font" type="font/woff2" crossorigin />
+
   <!-- for general use -->
   <link rel="icon" type="image/png"    href="/images/anchor.png" />
 
