--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
   <meta property="og:image" content="/images/ship-240-240-240.png" />
 
-  <title>{{ page.title }}</title>
+  <title>{{ page.title | escape_once }}</title>
 
   <link rel="stylesheet" href="/ahoy.css" />
 
