--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <meta name="twitter:creator" content="@jimthoburn" />
   <meta property="og:image" content="/images/ship-240-240-240.png" />
   <meta property="og:description" content="{{ site.description }}" />
-  {% endcoment %}
+  {% endcomment %}
 
   <link rel="stylesheet" href="/ahoy.css" />
 
