Add a drop cap style

--- a/ahoy.css
+++ b/ahoy.css
@@ -84,6 +84,28 @@
     background-size: 1.4em 1.4em;
     */
   }
+  @media (min-width: 40em) {
+    .banner + .container p:first-child {
+      font-size: 1.2em;
+      margin-bottom: 1.1666666667em;
+    }
+  }
+  @media (min-width: 60em) {
+    .banner + .container p:first-child {
+      font-size: 1.4em;
+      margin-bottom: 1em;
+    }
+  }
+  .banner + .container p:first-child + p:first-letter {
+    -webkit-initial-letter: 2;
+    initial-letter: 2;
+    margin-right: 0.25em;
+  }
+  .banner + .container p:first-child + p a:first-letter {
+    -webkit-initial-letter: unset;
+    initial-letter: unset;
+    margin-right: unset;
+  }
   @media (min-width: 20em) {
     .container {
       padding: 2.8em 1.4em;
