--- a/ahoy.css
+++ b/ahoy.css
@@ -93,7 +93,9 @@
   @media (min-width: 60em) {
     .banner + .container p:first-child {
       font-size: 1.4em;
-      margin-bottom: 1em;
+      line-height: 1.5;
+      margin-top: 1.5em;
+      margin-bottom: 1.5em;
     }
   }
   .banner + .container p:first-child + p:first-letter {
