--- a/ahoy.css
+++ b/ahoy.css
@@ -273,13 +273,25 @@
       transform: rotate(-2deg); 
     }           
   }
-  svg {
+  .ahoy svg {
     -webkit-animation-name: tossing;
     -webkit-animation-duration: 8s; 
     -webkit-animation-iteration-count: infinite;
     animation-name: tossing;
     animation-duration: 8s; 
     animation-iteration-count: infinite;
+  }
+
+  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
+    span.ahoy {
+      display: block;
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgba(1, 115, 175, 1)" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
+      /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
+      background-repeat: repeat-x;
+      background-position: 50% 85%;
+      background-size: 1em auto;
+      max-width: 10em;
+    }
   }
 
   figure {
@@ -332,7 +344,7 @@
 
 
 
-  .ahoy {
+  a.ahoy {
     position: absolute;
     z-index: 1;
     padding: 0.7em 1.4em;
@@ -340,19 +352,30 @@
     background: rgb(51, 51, 51);
     text-decoration: none;
   }
-  .ahoy:hover,
-  .ahoy:active,
-  .ahoy:focus {
+  a.ahoy:hover,
+  a.ahoy:active,
+  a.ahoy:focus {
+    background-color: rgb(1, 115, 175);
     color: white;
   }
-  .ahoy h2 {
+  a.ahoy h2 {
     display: inline;
     font-size: 0.75em;
   }
-  .ahoy svg {
+  a.ahoy svg {
     font-size: 0.5em;
     vertical-align: top;
     margin-right: 1.4em;
+  }
+
+  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
+    a.ahoy {
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
+      /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
+      background-repeat: repeat-x;
+      background-position: 50% 75%;
+      background-size: 1em auto;
+    }
   }
 
 
