--- a/ahoy.css
+++ b/ahoy.css
@@ -282,15 +282,36 @@
     animation-iteration-count: infinite;
   }
 
+  @keyframes churning {
+    0% {
+      background-position: 50% 82.5%;
+    }
+    50% {
+      background-position: 47.5% 85%;
+    }
+    100% {
+      background-position: 50% 82.5%; 
+    }           
+  }
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
     span.ahoy {
       display: block;
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgba(1, 115, 175, 1)" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
       /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
       background-repeat: repeat-x;
-      background-position: 50% 85%;
+      background-position: 4% 85%;
       background-size: 1em auto;
-      max-width: 10em;
+      text-align: center;
+
+      /*
+      animation-name: churning;
+      animation-duration: 8s; 
+      animation-iteration-count: infinite;
+
+      margin-right: calc(-50vw + 16.5em);
+      margin-left: calc(-50vw + 16.5em);
+      padding-left: calc(50vw - 16.5em);
+      */
     }
   }
 
@@ -342,8 +363,6 @@
   }
 
 
-
-
   a.ahoy {
     position: absolute;
     z-index: 1;
@@ -351,6 +370,7 @@
     color: white;
     background: rgb(51, 51, 51);
     text-decoration: none;
+    text-align: center;
   }
   a.ahoy:hover,
   a.ahoy:active,
@@ -359,8 +379,9 @@
     color: white;
   }
   a.ahoy h2 {
-    display: inline;
     font-size: 0.75em;
+    line-height: 1.8666666667;
+    margin-top: 0.9333333334em;
   }
   a.ahoy svg {
     font-size: 0.5em;
@@ -373,7 +394,7 @@
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
       /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
       background-repeat: repeat-x;
-      background-position: 50% 75%;
+      background-position: 50% 41%;
       background-size: 1em auto;
     }
   }
