--- a/ahoy.css
+++ b/ahoy.css
@@ -23,7 +23,7 @@
   }
 
   body {
-    font: 100%/1.4 "Mate", "Goudy Bookletter 1911", Georgia, serif;
+    font: 100%/1.4 "Goudy Bookletter 1911", Georgia, serif;
     margin: 0;
     padding: 0;
 
