--- a/ahoy.css
+++ b/ahoy.css
@@ -158,18 +158,9 @@
     line-height: 1.5;
     margin-top: 1.5em;
   }
-  h1#hello {
-    /* @hidden-accessible */
-    position: absolute;
-    left: -9999px;
-  }
   h1#hello + p {
-    margin-top: 0;
   }
   .social h2 {
-    /* @hidden-accessible */
-    position: absolute;
-    left: -9999px;
   }
   h3 {
     margin-top: 1.25em;
@@ -373,8 +364,10 @@
     font-size: 1.4em;
     text-decoration: none;
   }
-  h1 + .action a,
-  h2 + .action a {
+  h2 + p.action a {
+    font-size: 2em;
+  }
+  h2 + ul.action li:first-child a {
     font-size: 2em;
   }
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
@@ -404,11 +397,14 @@
     background-color: rgba(40, 155, 215, 0.8);
     color: white;
   }
-  */
 
   .action li {
     display: inline-block;
     margin-right: 0.7em;
+    margin-bottom: 0.7em;
+  }
+  */
+  .action li {
     margin-bottom: 0.7em;
   }
 
@@ -416,8 +412,8 @@
   a.ahoy {
     position: absolute;
     z-index: 1;
-    padding: 0.7em 1.4em;
-    background: rgba(0, 0, 0, 0.5);
+    padding: 0.375em 0.7em 0;
+    margin: 0.7em;
     color: white;
     text-decoration: none;
     text-align: center;
@@ -461,7 +457,7 @@
   }
   .banner:before {
     content: "";
-    background: rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
     left: 0;
@@ -493,7 +489,6 @@
     margin-top: 0;
   }
   .banner .credit {
-    background: rgb(51, 51, 51);
     position: absolute;
     bottom: 0;
     right: 0;
@@ -519,17 +514,29 @@
     text-decoration: underline;
   }
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
-    .banner .credit a b {
-      text-decoration: none;
-      /* background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M 0 0, Q 50 25, 100 0, L 100 100, L 0 100, L 0 0"></path></svg>'); */
-
+    .home a.banner div h3 {
       background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
       /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
       background-repeat: repeat-x;
       background-position: bottom;
-      background-size: 0.75em auto;
+      background-size: 1em auto;
+    }
+  }
+  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
+    .container + .banner div h1 {
+      /* background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M 0 0, Q 50 25, 100 0, L 100 100, L 0 100, L 0 0"></path></svg>'); */
 
-      display: inline-block;
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
+      /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
+      background-repeat: repeat-x;
+      background-position: bottom;
+      background-size: 1em auto;
+
+      padding: 0 0.35em 0.35em;
+    }
+    .container + .banner div h1 + p {
+      margin-top: 0;
+      padding: 0.35em 0.7em 0;
     }
   }
   a.banner {
@@ -688,7 +695,7 @@
 
   @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
     .home a.banner div h3 {
-      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="M 0 0 Q 50 25, 100 0 L 100 10 Q 50 35, 0 10"></path></svg>');
       /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
       background-repeat: repeat-x;
       background-position: bottom;
