--- a/ahoy.css
+++ b/ahoy.css
@@ -344,24 +344,56 @@
   h2 + ul.action {
     margin-top: 0.7em;
   }
-
-  /*
+  .action a {
+    font-family: "Goudy Bookletter 1911", Georgia, serif;
+    display: inline-block;
+    padding: 0.7em 1em;
+    background-color: rgba(40, 155, 215, 0.2);
+    color: rgb(0, 115, 175);
+    border-radius: 0.25em;
+    background-image: none;
+    /*
+    font-size: 0.75em;
+    font-size: 2em;
+    */
+    margin-bottom: 0.375em;
+    text-decoration: none;
+  }
   .action a:hover,
   .action a:active,
   .action a:focus {
     background-color: rgba(40, 155, 215, 0.8);
     color: white;
   }
+  @supports (background-image: url('data:image/svg+xml;utf8,<svg></svg>')) {
+    .action a {
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="white" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
+      /* background-image: url('data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgMTAwIDI1IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGZpbGw9InJnYmEoMSwgMTE1LCAxNzUsIDAuNSkiIGQ9Ik0gMCAwLCBRIDUwIDI1LCAxMDAgMCwgTCAxMDAgMTAsIFEgNTAgMzUsIDAsIDEwIj48L3BhdGg+PC9zdmc+Cg=='); */
+      background-repeat: repeat-x;
+      background-position: 0% 75%;
+      background-size: 1em auto;
+      background-color: rgba(40, 155, 215, 0.1);
+    }
+    .action a,
+    .action a:hover,
+    .action a:active,
+    .action a:focus {
+      background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 100 25" xmlns="http://www.w3.org/2000/svg"><path fill="rgb(80, 195, 255)" d="M -10 0 Q 50 25, 110 0 L 110 10 Q 50 35, -10 10"></path></svg>');
+      background-image: none;
+    }
+    .action a:hover,
+    .action a:active,
+    .action a:focus {
+      color: white;
+      background-color: rgb(40, 155, 215);
+    }
+
+  }
 
   .action li {
-    display: inline-block;
-    margin-right: 0.7em;
-    margin-bottom: 0.7em;
+    display: inline;
   }
-  */
-  .action li {
-    margin-bottom: 0.7em;
-  }
+
 
 
   a.ahoy {
@@ -412,7 +444,7 @@
   }
   .banner:before {
     content: "";
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.25);
     position: absolute;
     top: 0;
     left: 0;
@@ -668,6 +700,7 @@
       background-position: bottom;
       background-size: auto auto;
     }
+    .home a.banner div h3,
     .home a.banner:hover div h3,
     .home a.banner:active div h3,
     .home a.banner:focus div h3 {
